@@ -570,7 +570,7 @@ try:
 	utilities.parse_use_local_desc(f, luselist)
 	f.close()
 except (IOError, OSError, ParseError), e:
-	logging.exception("Couldn't read from use.local.desc", e)
+	logging.exception("Couldn't read from use.local.desc")
 	sys.exit(1)
 
 if portdir_overlay != portdir:
@@ -581,7 +581,7 @@ if portdir_overlay != portdir:
 			utilities.parse_use_local_desc(f, luselist)
 			f.close()
 		except (IOError, OSError, ParseError), e:
-			logging.exception("Couldn't read from '%s'" % filename, e)
+			logging.exception("Couldn't read from '%s'" % (filename,))
 			sys.exit(1)
 	del filename
 
@@ -596,7 +596,7 @@ try:
 		for l in range(0, len(vardescs)):
 			uselist.append(var.lower() + "_" + vardescs[l].split()[0])
 except (IOError, OSError, ParseError), e:
-	logging.exception("Couldn't read USE flags from use.desc", e)
+	logging.exception("Couldn't read USE flags from use.desc")
 	sys.exit(1)
 
 # retrieve a list of current licenses in portage
@@ -1059,6 +1059,8 @@ for x in scanlist:
 		fails["changelog.missing"].append(x+"/ChangeLog")
 	
 	#metadata.xml file check
+	muselist = []
+
 	if "metadata.xml" not in checkdirlist:
 		stats["metadata.missing"]+=1
 		fails["metadata.missing"].append(x+"/metadata.xml")
@@ -1078,15 +1080,14 @@ for x in scanlist:
 				stats["metadata.bad"]+=1
 				fails["metadata.bad"].append(x+"/metadata.xml")
 
-	#load USE flags from metadata.xml
-	muselist=[]
-	try:
-		f = open(os.path.join(checkdir, "metadata.xml"))
-		utilities.parse_metadata_use(f, muselist)
-		f.close()
-	except (IOError, OSError, ParseError), e:
-		logging.exception("Couldn't read from metadata.xml", e)
-		sys.exit(1)
+		#load USE flags from metadata.xml
+		try:
+			f = open(os.path.join(checkdir, "metadata.xml"))
+			utilities.parse_metadata_use(f, muselist)
+			f.close()
+		except (EnvironmentError, ParseError), e:
+			logging.exception("Couldn't read from metadata.xml")
+			sys.exit(1)
 
 	allmasked = True
 
