@@ -2,4 +2,5 @@
 <title>Ebuild</title>
 &package_ebuild_phases;
 &package_ebuild_helper_functions;
+&package_ebuild_eapi_2;
 </chapter>
