@@ -1,0 +1,39 @@
+<sect1 id='package-ebuild-eapi-2'>
+	<title>EAPI 2_pre0</title>
+	<sect2 id='package-ebuild-eapi-2-use-deps'>
+	<title>USE Dependencies</title>
+	<sect3 id='package-ebuild-eapi-2-use-deps-conditional'>
+	<title>Conditional USE Dependencies</title>
+	<table><title>Syntax Examples</title>
+	<tgroup cols='2' align='left' >
+	<colspec colname='compact'/>
+	<colspec colname='expanded'/>
+	<thead>
+	<row>
+	<entry>Compact Form</entry>
+	<entry>Equivalent Expanded Form</entry>
+	</row>
+	</thead>
+	<tbody>
+	<row>
+	<entry>foo[bar?]</entry>
+	<entry>foo  bar? (  foo[bar] )</entry>
+	</row>
+	<row>
+	<entry>foo[-bar?]</entry>
+	<entry>foo !bar? ( foo[-bar] )</entry>
+	</row>
+	<row>
+	<entry>foo[bar=]</entry>
+	<entry>foo  bar? (  foo[bar] ) !bar? ( foo[-bar] )</entry>
+	</row>
+	<row>
+	<entry>foo[bar!=]</entry>
+	<entry>foo  bar? ( foo[-bar] ) !bar? (  foo[bar] )</entry>
+	</row>
+	</tbody>
+	</tgroup>
+	</table>
+	</sect3>
+	</sect2>
+</sect1>
