@@ -25,7 +25,17 @@ class IsValidAtom(TestCase):
 			  ( "sys-apps/portage:foo", True ),
 			  ( "sys-apps/portage-2.1:foo", False ),
 			  ( "sys-apps/portage-2.1:", False ),
-			  ( "=sys-apps/portage-2.2*:foo[bar][-baz][doc?][-build?]", True ),
+			  ( "=sys-apps/portage-2.2*:foo[bar?,-baz?,doc!=,build=]", True ),
+			  ( "=sys-apps/portage-2.2*:foo[build=]", True ),
+			  ( "=sys-apps/portage-2.2*:foo[doc!=]", True ),
+			  ( "=sys-apps/portage-2.2*:foo[-doc!=]", False ),
+			  ( "=sys-apps/portage-2.2*:foo[-doc=]", False ),
+			  ( "=sys-apps/portage-2.2*:foo[bar][-baz][doc?][-build?]", False ),
+			  ( "=sys-apps/portage-2.2*:foo[bar,-baz,doc?,-build?]", True ),
+			  ( "=sys-apps/portage-2.2*:foo[bar,-baz,doc?,-build?,]", False ),
+			  ( "=sys-apps/portage-2.2*:foo[,bar,-baz,doc?,-build?]", False ),
+			  ( "=sys-apps/portage-2.2*:foo[bar,-baz][doc?,-build?]", False ),
+			  ( "=sys-apps/portage-2.2*:foo[bar][doc,build]", False ),
 			  ( ">~cate-gory/foo-1.0", False ),
 			  ( ">~category/foo-1.0", False ),
 			  ( "<~category/foo-1.0", False ),
